# pyme-tool

./: .gitignore  .inventory.py.kate-swp  AUTHORS  README.md  about.py  changelog.md  convert_png_to_bytes.py  cosas por hacer.txt  home.py  icon.py  inventory.db  inventory.py  main-old-funciona.py  main.py  main1.py  plugin_base.py  plugin_config.py  plugins_tab.py  product.py  pyproject.toml  report.py  sale.py  settings.py  setup.spec  updater.py  utils.py
plugins/: __init__.py  plugins_config.json
plugins/ejemplo_calculadora/: __init__.py  plugin.json  plugin.py
plugins/sample_analysis/: __init__.py  database.py  plugin.json  plugin.py  sample_analysis.db
plugins/sample_analysis/ui/: __init__.py  analysis_method_view.py  certificate_view.py  lot_view.py  retention_book_view.py
printers/: __init__.py  base.py  goojprt.py  manager.py
