[project]
name = "pyme-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "l337quez",email = "l337.ronald@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
